fixing sliders on mobile

--- a/frontend/src/DiscoverDaily/discoverDaily.scss
+++ b/frontend/src/DiscoverDaily/discoverDaily.scss
@@ -506,3 +506,7 @@ body {
     float: left;
     display: flex;
 }
+
+.MuiSlider-thumb.MuiSlider-thumbColorPrimary {
+    pointer-events: none;
+}
